Update to 2019 style

--- a/src/index.html
+++ b/src/index.html
@@ -17,28 +17,28 @@
   <title>Improwomen</title>
   <style type="text/css">
     html, body {
-      background-color: #B1C643;
+      background-color: #1f4057;
+      color: rgba(255,255,255,.75);
     }
   </style>
 </head>
 
 <body class="text-left text-sm-center">
-  <div class="container">
+  <div class="container header-container">
     <div class="page-content header">
-      <h1>Improwomen III:<br />s mámou</h1>
-      <date>28. - 30. 9. 2018</date>
+      <h1>Improwomen:<br />sNÍ oNÍ</h1>
+      <date>18. - 20. října 2019</date> v Osinalicích
     </div>
   </div>
   <div class="container">
     <div class="page-content">
       <h2>O čem to je?</h2>
-      <p>Worskhop Improwomen probíhá jednou za rok v malé skupině improvizátorek. Letošní téma jsme se rozhodly darovat ženám, ze kterých jsme se zrodily, ženám, které nás ovlivnily a my je. Pozvěte vaše mámy a pojďte se vydat na společnou pouť.</p>
+      <p class="text-justify lead mb-5">Worskhop Improwomen probíhá jednou za rok v malé skupině improvizátorek. Letošní téma jsme se rozhodly darovat ženám, ze kterých jsme se zrodily, ženám, které nás ovlivnily a my je. Pozvěte vaše mámy a pojďte se vydat na společnou pouť.</p>
 
       <p>
         Přihlášky a více informací zjistíte e-mailem od <a href="mailto:vanda.gabrielova@gmail.com">
-          <span class="fa fa-envelope-o" />
-          Vandy Gabrielové
-        </a>.
+          <span class="fa fa-envelope-o"></span>
+          Vandy Gabrielové</a>.
       </p>
       <p>
         Pořádá <a href="https://www.improliga.cz">Česká improvizační liga z. s.</a>
