--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
       <h2>O čem to je?</h2>
       <p class="text-justify lead mb-5">Worskhop Improwomen probíhá jednou za rok v malé skupině improvizátorek. Letošní téma jsme se rozhodly darovat ženám, ze kterých jsme se zrodily, ženám, které nás ovlivnily a my je. Pozvěte vaše mámy a pojďte se vydat na společnou pouť.</p>
 
+      <p>Akci organizují a vedou Táňa Jírová a Vanda Gabrielová.</p>
+
       <p>
         Přihlášky a více informací zjistíte e-mailem od <a href="mailto:vanda.gabrielova@gmail.com">
           <span class="fa fa-envelope-o"></span>
