--- a/src/index.html
+++ b/src/index.html
@@ -32,32 +32,30 @@
   </div>
   <div class="page-container info-page">
     <div class="stars">
-      <div class="twinkling">
-        <div class="container page-container">
-          <div class="page-content">
-            <h2>O čem to je?</h2>
-            <p class="text-justify lead mb-5">Worskhop Improwomen probíhá jednou za rok v malé skupině improvizátorek. Letošní téma jsme se rozhodly darovat ženám, ze kterých jsme se zrodily, ženám, které nás ovlivnily a my je. Pozvěte vaše mámy a pojďte se vydat na společnou pouť.</p>
+    </div>
+    <div class="container page-container over-stars">
+      <div class="page-content">
+        <h2>O čem to je?</h2>
+        <p class="text-justify lead mb-5">Worskhop Improwomen probíhá jednou za rok v malé skupině improvizátorek. Letošní téma jsme se rozhodly darovat ženám, ze kterých jsme se zrodily, ženám, které nás ovlivnily a my je. Pozvěte vaše mámy a pojďte se vydat na společnou pouť.</p>
 
-            <p>Akci organizují a vedou Táňa Jírová a Vanda Gabrielová.</p>
+        <p>Akci organizují a vedou Táňa Jírová a Vanda Gabrielová.</p>
 
-            <p>
-              Přihlášky a více informací zjistíte e-mailem od <a href="mailto:vanda.gabrielova@gmail.com">
-                <span class="fa fa-envelope-o"></span>
-                Vandy Gabrielové</a>.
-            </p>
-            <p>
-              Pořádá <a href="https://www.improliga.cz">Česká improvizační liga z. s.</a>
-            </p>
-            <footer>
-              <a href="https://www.facebook.com/events/248499359029893/">
-                <span class="fa fa-facebook-official" />
-              </a>
-              <a href="https://www.improliga.cz/">
-                <span class="fa fa-improliga" />
-              </a>
-            </footer>
-          </div>
-        </div>
+        <p>
+          Přihlášky a více informací zjistíte e-mailem od <a href="mailto:vanda.gabrielova@gmail.com">
+            <span class="fa fa-envelope-o"></span>
+            Vandy Gabrielové</a>.
+        </p>
+        <p>
+          Pořádá <a href="https://www.improliga.cz">Česká improvizační liga z. s.</a>
+        </p>
+        <footer>
+          <a href="https://www.facebook.com/events/248499359029893/">
+            <span class="fa fa-facebook-official" />
+          </a>
+          <a href="https://www.improliga.cz/">
+            <span class="fa fa-improliga" />
+          </a>
+        </footer>
       </div>
     </div>
   </div>
@@ -71,5 +69,6 @@
     ga('create', 'UA-74989736-1', 'auto');
     ga('send', 'pageview');
   </script>
+  <script src="scripts/stars.js"></script>
 </body>
 </html>
